<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="Typos">
    <string name="app_name">Estatistica Fácil</string>
    <string name="txt_default"> - </string>
    <string name="txt_no_variable_inserted">Ainda não foi inserida nenhuma variável.</string>
    <string name="txt_no_variable_selected">Nenhuma variável selecionada.</string>
    <string name="txt_cmd_line">Linha de comando</string>
    <string name="txt_about">Sobre</string>
    <string name="txt_formula">Fórmulas usadas</string>
    <string name="txt_data_analyse">Análise descritiva</string>
    <string name="txt_inference">Análise inferencial</string>
    <string name="txt_probability">Probabilidade</string>
    <string name="txt_variables">Tabela de variaveis</string>
    <string name="txt_variable">Variável X</string>
    <string name="txt_averages">Médias</string>
    <string name="txt_avg_arithmetic">Aritimética </string>
    <string name="txt_avg_arithmetic_pound">Aritimética ponderada</string>
    <string name="txt_avg_geometric">Geométrica</string>
    <string name="txt_avg_geometric_pound">Geométrica ponderada</string>
    <string name="txt_avg_weighted">Harmônica</string>
    <string name="txt_avg_weighted_pound">Harmônica ponderda</string>
    <string name="txt_avg_quadratic">Quadrática</string>
    <string name="txt_avg_quadratic_pound">Quadrática ponderada</string>
    <string name="txt_mode">Moda</string>
    <string name="txt_kurtosis">Curtose</string>
    <string name="txt_asymmetry">Assimetria</string>
    <string name="txt_asymmetry_pearson_st">Primeiro Coeficiente de Pearson</string>
    <string name="txt_asymmetry_pearson_nd">Segundo Coeficiente de Pearson</string>
    <string name="txt_asymmetry_quart">Coeficiente Quartílico</string>
    <string name="txt_asymmetry_cent">Coeficiente Percentílico</string>
    <string name="txt_charts">Gráficos</string>
    <string name="txt_pizza_chart">Pizza</string>
    <string name="txt_column_chart">Coluna</string>
    <string name="txt_dispersion_chart">Dispersão</string>
    <string name="txt_box_chart">Caixa </string>
    <string name="txt_histogram_chart">Histograma </string>
    <string name="txt_tab_interval">Intervalo de confiança</string>
    <string name="txt_tab_hypothesis">Teste de hipótese</string>
    <string name="txt_tab_table">Tabela</string>
    <string name="txt_tab_class">Classes</string>
    <string name="txt_tab_description">Descrição</string>
    <string name="txt_var_as_sample">Usar variáveis como amostra</string>
    <string name="txt_confidence_level">Nível de confiança(%) &#947;:</string>
    <string name="txt_hypothesis">Hipótese H&#8320;:</string>
    <string name="txt_sample_data">Dados amostrais</string>
    <string name="txt_sample_avg">Média x&#772;:</string>
    <string name="txt_sample_size">Tamanho n:</string>
    <string name="txt_sample_success">Sucesso p&#770;:</string>
    <string name="txt_sample_variance">Variância s²:</string>
    <string name="txt_population_data">Dados populacionais</string>
    <string name="txt_population_avg">Média &#956;:</string>
    <string name="txt_population_size">Tamanho N:</string>
    <string name="txt_population_deviation">Desvio padrão &#963;:</string>
    <string name="cmd_default"> </string>
    <string name="cmd_list">Lista de comandos para manipualção das variáveis</string>
    <string name="cmd_description">Explicação dos comandos</string>
    <string name="cmd_detail">Detalhamento dos comandos</string>
    <string name="cmd_obs">Observação</string>
    <string name="cmd_obs_float_num">Números decimais devem ser separados por ponto (.)</string>
    <string name="cmd_obs_text_value">Todos os valores textuais devem começar obrigatoriamente com uma letra (e serem seguidos de letras, numeros, _ ou -)</string>
    <string name="cmd_obs_var_type">Uma variável recebe seu tipo (numérico ou textual) assim que ela é criada e seu tipo nunca poderá ser alterado</string>
    <string name="cmd_obs_value_type">Os tipos dos valores dos elementos deverão respeitar o tipo da variável (numérico ou textual).</string>
    <string name="cmd_obs_words">Não é possível nomear as variáveis ou atribuir valores textuais com os comandos listados.</string>
    <string name="cmd_new">Criar uma nova variável</string>
    <string name="cmd_new_detail">new var {text} val {number, text, values}</string>
    <string name="cmd_add">Adiciona um novo elemento na variável</string>
    <string name="cmd_add_detail">add col {number} val {number, text, values}</string>
    <string name="cmd_edt">Edita um elemento na variável</string>
    <string name="cmd_edt_detail">edt col {number} row {number} val {number, text}</string>
    <string name="cmd_del_var">Deleta uma variável</string>
    <string name="cmd_del_var_detail">del col {number}</string>
    <string name="cmd_del_el">Deleta um elemento da variável</string>
    <string name="cmd_del_el_detail">del col {number} row {number}</string>
    <string name="cmd_primary">Comandos que executam uma ação específica</string>
    <string name="cmd_primary_detail">new, add, del e edt</string>
    <string name="cmd_secondary">Comandos para definição de variáves </string>
    <string name="cmd_secondary_detail">var, col, row e val</string>
    <string name="cmd_variables">Tipos de valores aceitos nas variveis</string>
    <string name="cmd_variables_detail">number, text, values</string>
    <string name="cmd_new_desc">Inicia o comando para criar uma variável</string>
    <string name="cmd_add_desc">Inicia o comando para adicionar um novo valor na variável</string>
    <string name="cmd_edt_desc">Inicia o comando para editar um valor na variável</string>
    <string name="cmd_del_desc">Inicia o comando para deletar uma variável ou um valor na variável</string>
    <string name="cmd_var_desc">Indica o nome da variável</string>
    <string name="cmd_col_desc">Indica o numero de uma coluna (inteiro maior que 0)</string>
    <string name="cmd_row_desc">Indica o numero de uma linha (inteiro maior que 0)</string>
    <string name="cmd_val_desc">Indica os valores que serão atribuídos a um (ou mais) elementos</string>
    <string name="cmd_number_desc">Representa um valor numérico, (inteiro ou decimal)</string>
    <string name="cmd_text_desc">Representa um valor textual (aceita apenas letras, numeros, _ e -)</string>
    <string name="cmd_values_desc">Representa um valor numerico ou textual (separe por vírgula para mais de um valor)</string>
    <string name="fml_default"> </string>
    <string name="fml_arithmetic_avg_txt">Média Aritmética</string>
    <string name="fml_arithmetic_avg_pnd_txt">Média Aritmética Ponderada</string>
    <string name="fml_geometric_avg_txt">Média Geométrica</string>
    <string name="fml_geometric_avg_pnd_txt">Média Geométrica Ponderada</string>
    <string name="fml_weighted_avg_txt">Média Harmônica</string>
    <string name="fml_weighted_avg_pnd_txt">Média Harmônica Ponderada</string>
    <string name="fml_quadratic_avg_txt">Média Harmônica</string>
    <string name="fml_quadratic_avg_pnd_txt">Média Harmônica Ponderada</string>
    <string name="fml_deviation_txt">Desvio padrão</string>
    <string name="fml_fst_quart_txt">Primeiro Quartil</string>
    <string name="fml_snd_quart_txt">Segundo Quartil</string>
    <string name="fml_trd_quart_txt">Terceiro Quartil</string>
    <string name="fml_fst_tenth_txt">Primeiro Decil</string>
    <string name="fml_nth_tenth_txt">Nono Decil</string>
    <string name="fml_confidence_interval_avg_txt">Intervalo de Confiança: Média</string>
    <string name="fml_confidence_interval_prop_txt">Intervalo de Confiança: Proporção</string>
    <string name="fml_confidence_interval_var_txt">Intervalo de Confiança: Variância</string>
    <string name="btn_cmd">&#62;</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_calculate">Calcular</string>
    <string name="sym_avg_arithmetic">x&#772; = &#8721;(&#967;&#161;) / &#8721;(n)</string>
    <string name="sym_avg_arithmetic_pound">x&#772; = &#8721;(&#967;&#161; * &#402;&#161;) / &#8721;(&#402;&#161;)</string>
    <string name="sym_avg_geometric">x&#772; = &#8719;(&#967;&#161;) ^ (1 / n)</string>
    <string name="sym_avg_geometric_pound">x&#772; = [&#8719; (&#967;&#161; ^ &#402;&#161;)] ^ [1 / &#8721;(&#402;&#161;)]</string>
    <string name="sym_avg_weighted">x&#772; = n / &#8721;(1 / &#967;&#161;)</string>
    <string name="sym_avg_weighted_pound">x&#772; = &#8721;(&#402;&#161;) / &#8721;(&#402;&#161; / &#967;&#161;)</string>
    <string name="sym_avg_quadratic">x&#772; = &#8730;(&#8721; (&#967;&#161; ^ 2))</string>
    <string name="sym_avg_quadratic_pound">x&#772; = &#8730;[&#8721; (&#967;&#161; ^ 2 * &#402;&#161;)]</string>
    <string name="sym_kurtosis">K = (Q&#8323; - Q&#8321;) / 2(D&#8329; - D&#8321;)</string>
    <string name="sym_asymmetry_pearson_st">A = (x&#772; - Mo) / S</string>
    <string name="sym_asymmetry_pearson_nd">A = 3(x&#772; - Md) / S</string>
    <string name="sym_asymmetry_quart">A = (Q&#8323; + Q&#8321; - 2Q&#8322;) / (Q&#8323; - Q&#8321;)</string>
    <string name="sym_asymmetry_percent">A = (P&#8329;&#8320; + P&#8321;&#8320; - 2P&#8325;&#8320;) / (P&#8329;&#8320; - P&#8321;&#8320;)</string>
    <string name="sym_standard_deviation">E = &#8730;{E(&#967;&#161; ^ 2) - [E(&#967;&#161;)] ^ 2}</string>
    <string name="sym_fst_quart">Q&#8321; = (n + 1) / 4</string>
    <string name="sym_snd_quart">Q&#8322; = (n + 1) / 2</string>
    <string name="sym_trd_quart">Q&#8323; = 3 * (n + 1) / 4</string>
    <string name="sym_fst_tenth">D&#8321; = (n + 1) / 10</string>
    <string name="sym_nth_tenth">D&#8329; = 9 * (n + 1) / 10</string>
    <string name="sym_interval_avg">Q&#8323; = 3 * (n + 1) / 4</string>
    <string name="sym_interval_prop">D&#8321; = (n + 1) / 10</string>
    <string name="sym_interval_var">D&#8329; = 9 * (n + 1) / 10</string>
    <string name="sym_p_hat">p&#0302;</string>
    <string name="sym_q_hat">q&#0302;</string>
    <string name="sym_mu">&#956;</string>
    <string name="sym_chi">&#0967;</string>
    <string name="sym_phi">&#0981;</string>
    <string name="sym_more_than">&#62;</string>
    <string name="sym_more_equals">&#8805;</string>
    <string name="sym_less_than">&#60;</string>
    <string name="sym_less_equals">&#8804;</string>
    <string name="sym_equals">&#61;</string>
    <string name="sym_not_equals">&#8800;</string>
    <string name="sum_value">&#8721;(&#967;&#161;)</string>
    <string name="sum_frequency">&#8721;(&#402;&#161;)</string>
    <string name="sum_accumulated_frequency">F&#161;</string>
    <string name="sum_prod_val_freq">&#8721;(&#967;&#161; * &#402;&#161;)</string>
    <string name="sum_div_val">&#8721;(1 / &#967;&#161;)</string>
    <string name="sum_div_freq_val">&#8721;(&#402;&#161; / &#967;&#161;)</string>
    <string name="sum_sqrt_val">&#8721;(&#967;&#161; ^ 2)</string>
    <string name="sum_prod_sqrt_val_freq">&#8721;(&#967;&#161; ^ 2 * &#402;&#161;)</string>
    <string name="prd_value">&#8719;(&#967;&#161;)</string>
    <string name="prd_pwr_val_freq">&#8719;(&#967;&#161; ^ &#402;&#161;)</string>
    <string name="err_col_index">Coluna inválida</string>
    <string name="err_row_index">Linha inválida</string>
    <string name="err_text_number">Erro de valor textual</string>
    <string name="err_number_text">Erro de valor numérico</string>
    <string name="err_unknown_command">Comando desconhecido</string>
    <string name="err_general">Erro desconhecido</string>
    <string name="msg_building">Construindo</string>
    <string name="menu_data_analyse">@string/txt_data_analyse</string>
    <string name="menu_inference">@string/txt_inference</string>
    <string name="menu_probability">@string/txt_probability</string>
    <string name="menu_formula">@string/txt_formula</string>
    <string name="menu_variables">@string/txt_variables</string>
</resources>