<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_data_analyse"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/minimum_gap">

            <Switch
                android:id="@+id/swt_ht_var_sample"
                style="@style/TextViewColored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_var_as_sample" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/minimum_gap">

                <TextView
                    style="@style/TextViewColored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_sample_data" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_ht_var_sample"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/minimum_gap">

                <TextView
                    style="@style/TextViewColored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/txt_variable" />

                <Spinner
                    android:id="@+id/spn_ht_var_sample"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <com.sharktech.projectprob.customview.ItemConfidenceInterval
                android:id="@+id/ht_sample_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.sharktech.projectprob.customview.ItemConfidenceInterval
                android:id="@+id/ht_sample_avg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewColored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/medium_gap"
                android:text="@string/txt_population_data" />

            <com.sharktech.projectprob.customview.ItemConfidenceInterval
                android:id="@+id/ht_population_deviation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.sharktech.projectprob.customview.ItemConfidenceInterval
                android:id="@+id/ht_hypothesis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewColored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/txt_variable" />

                <Spinner
                    android:id="@+id/spn_ht_condition"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Platform.Widget.AppCompat.Spinner"/>

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="textPersonName|numberDecimal" />

            </LinearLayout>
        </LinearLayout>

        <com.sharktech.projectprob.customview.ItemConfidenceInterval
            android:id="@+id/ht_confidence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/minimum_gap">

            <TextView
                android:id="@+id/txt_ht_value"
                style="@style/TextViewColored"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0"
                android:background="@drawable/border_light"
                android:gravity="center" />

            <Button
                android:id="@+id/btn_ht_calculate"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/medium_gap"
                android:layout_marginTop="@dimen/large_gap"
                android:gravity="center"
                android:text="@string/btn_calculate"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>